improved handling of references for PN simulation